Fix input height and overflow styles

--- a/src/MultipleValuesInput/MultipleValuesInput.scss
+++ b/src/MultipleValuesInput/MultipleValuesInput.scss
@@ -8,6 +8,7 @@ $red: #D92929;
 .MultipleValuesInput {
   & > * {
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
   }
 
   &__root--hidden {
@@ -22,6 +23,10 @@ $red: #D92929;
     padding: 4px 7px 8px;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
   }
 
   &__item {
